# git-repositories

./: README.md  flake.nix  pyproject.toml  setup.cfg
PythonEDAApplicationGitRepositories/: application.py
PythonEDAGitRepositoriesApplication/: application.py
pythoneda/: __init__.py
pythoneda/git_python/: __init__.py
pythoneda/git_python/application/: __init__.py  application.py
