[tool.poetry]
name = "pythoneda-git-repositories-application"
version = "0.0.1a1"
description = "Application layer of PythonEDA Git Repositories package"
authors = ["rydnr <github@acm-sl.org>"]
readme = "README.md"
packages = [{include = "PythonEDAGitRepositoriesApplication"}]

[tool.poetry.dependencies]
python = "^3.7"
pythoneda-application-layer = "^0.0.1a2"
pythoneda-infrastructure-layer = "^0.0.1a2"
pythoneda-git-repositories = "^0.0.1a3"
pythoneda-git-repositories-infrastructure = "^0.0.1a3"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
